verifiable build: devnet -> mainnet for idl deploy

--- a/content/posts/2023-05-02-anchor-verifiable-build.adoc
+++ b/content/posts/2023-05-02-anchor-verifiable-build.adoc
@@ -171,7 +171,7 @@ cd solana-program-library/governance/program
 anchor build --verifiable
 # deploy the program
 cd ../..
-solana -um -k ~/.config/solana/devnet.json program write-buffer ./target/verifiable/spl_governance.so
+solana -um -k ~/.config/solana/mainnet.json program write-buffer ./target/verifiable/spl_governance.so
 # later the program can be upgraded from buffer to <PROGRAM_ID>
 
 # verify the build
